updated to Java 21